--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             cursor: pointer;
             transition: all 0.3s ease;
             box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+            margin: 10px;
         }
 
         button:hover {
@@ -99,7 +100,10 @@
     <div class="container">
         <h1>Random Joke Generator</h1>
         <p id="joke">Click the button to get a joke!</p>
+        
         <button id="jokeButton">Get a New Joke</button>
+        <button id="chuckButton">Chuck Norris Jokes</button>
+
         <!-- Geometric shapes for modern design -->
         <div class="shape shape1"></div>
         <div class="shape shape2"></div>
@@ -108,21 +112,59 @@
 
     <script>
         const jokeButton = document.getElementById('jokeButton');
+        const chuckButton = document.getElementById('chuckButton');
         const jokeText = document.getElementById('joke');
 
-        // Function to fetch the joke from the API
-        async function fetchJoke() {
+        // Array of available joke APIs
+        const jokeApis = [
+            'https://icanhazdadjoke.com/',
+            'https://v2.jokeapi.dev/joke/Any',
+            'https://v2.jokeapi.dev/joke/Any'
+        ];
+
+        // Function to randomly select one of the joke APIs
+        function getRandomJokeAPI() {
+            const randomIndex = Math.floor(Math.random() * jokeApis.length);
+            return jokeApis[randomIndex];
+        }
+
+        // Function to fetch and display a joke from a random API
+        async function fetchRandomJoke() {
+            const apiUrl = getRandomJokeAPI();
             try {
-                const response = await fetch('https://official-joke-api.appspot.com/jokes/random');
+                const response = await fetch(apiUrl, {
+                    headers: { 'Accept': 'application/json' }
+                });
                 const data = await response.json();
-                jokeText.innerHTML = `<strong>${data.setup}</strong><br>${data.punchline}`;
+                if (apiUrl.includes('icanhazdadjoke')) {
+                    jokeText.innerHTML = data.joke;
+                } else if (apiUrl.includes('jokeapi')) {
+                    if (data.type === 'single') {
+                        jokeText.innerHTML = data.joke;
+                    } else {
+                        jokeText.innerHTML = `<strong>${data.setup}</strong><br>${data.delivery}`;
+                    }
+                }
             } catch (error) {
                 jokeText.innerHTML = "Oops, something went wrong! Try again.";
             }
         }
 
-        // Event listener for button click
-        jokeButton.addEventListener('click', fetchJoke);
+        // Function to fetch and display a Chuck Norris joke
+        async function fetchChuckJoke() {
+            const chuckApi = 'https://api.chucknorris.io/jokes/random';
+            try {
+                const response = await fetch(chuckApi);
+                const data = await response.json();
+                jokeText.innerHTML = data.value;
+            } catch (error) {
+                jokeText.innerHTML = "Oops, something went wrong! Try again.";
+            }
+        }
+
+        // Event listeners for button clicks
+        jokeButton.addEventListener('click', fetchRandomJoke);
+        chuckButton.addEventListener('click', fetchChuckJoke);
     </script>
 
 </body>
