--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
             box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
         }
 
+        .save-button {
+            display: inline-block;
+            position: absolute;
+            right: 20px;
+            top: 20px;
+            background-color: #4caf50;
+        }
+
+        .back-button {
+            display: block;
+            margin-top: 20px;
+            background-color: #ff477e;
+        }
+
         .shape {
             position: absolute;
             border-radius: 50%;
@@ -97,74 +111,108 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container" id="mainPage">
         <h1>Random Joke Generator</h1>
         <p id="joke">Click the button to get a joke!</p>
         
         <button id="jokeButton">Get a New Joke</button>
         <button id="chuckButton">Chuck Norris Jokes</button>
+        <button id="saveJokeButton" class="save-button">Save Joke</button>
+        <button id="viewSavedJokesButton">View Saved Jokes</button>
 
-        <!-- Geometric shapes for modern design -->
         <div class="shape shape1"></div>
         <div class="shape shape2"></div>
         <div class="shape shape3"></div>
     </div>
 
+    <div class="container" id="savedJokesPage" style="display: none;">
+        <h1>Saved Jokes</h1>
+        <p id="savedJoke">Click the button to see a saved joke!</p>
+        
+        <button id="generateSavedJokeButton">Get a Saved Joke</button>
+        <button id="backToMainButton" class="back-button">Back to Main</button>
+    </div>
+
     <script>
         const jokeButton = document.getElementById('jokeButton');
         const chuckButton = document.getElementById('chuckButton');
+        const saveJokeButton = document.getElementById('saveJokeButton');
+        const viewSavedJokesButton = document.getElementById('viewSavedJokesButton');
+        const generateSavedJokeButton = document.getElementById('generateSavedJokeButton');
+        const backToMainButton = document.getElementById('backToMainButton');
         const jokeText = document.getElementById('joke');
+        const savedJokeText = document.getElementById('savedJoke');
+        const mainPage = document.getElementById('mainPage');
+        const savedJokesPage = document.getElementById('savedJokesPage');
 
-        // Array of available joke APIs
+        let savedJokes = [];
+
         const jokeApis = [
             'https://icanhazdadjoke.com/',
             'https://v2.jokeapi.dev/joke/Any',
-            'https://v2.jokeapi.dev/joke/Any'
         ];
 
-        // Function to randomly select one of the joke APIs
         function getRandomJokeAPI() {
             const randomIndex = Math.floor(Math.random() * jokeApis.length);
             return jokeApis[randomIndex];
         }
 
-        // Function to fetch and display a joke from a random API
         async function fetchRandomJoke() {
             const apiUrl = getRandomJokeAPI();
             try {
-                const response = await fetch(apiUrl, {
-                    headers: { 'Accept': 'application/json' }
-                });
+                const response = await fetch(apiUrl, { headers: { 'Accept': 'application/json' } });
                 const data = await response.json();
-                if (apiUrl.includes('icanhazdadjoke')) {
-                    jokeText.innerHTML = data.joke;
-                } else if (apiUrl.includes('jokeapi')) {
-                    if (data.type === 'single') {
-                        jokeText.innerHTML = data.joke;
-                    } else {
-                        jokeText.innerHTML = `<strong>${data.setup}</strong><br>${data.delivery}`;
-                    }
-                }
+                jokeText.innerHTML = data.joke || `${data.setup} - ${data.delivery}`;
             } catch (error) {
-                jokeText.innerHTML = "Oops, something went wrong! Try again.";
+                jokeText.innerHTML = "Oops, something went wrong!";
             }
         }
 
-        // Function to fetch and display a Chuck Norris joke
         async function fetchChuckJoke() {
-            const chuckApi = 'https://api.chucknorris.io/jokes/random';
             try {
-                const response = await fetch(chuckApi);
+                const response = await fetch('https://api.chucknorris.io/jokes/random');
                 const data = await response.json();
                 jokeText.innerHTML = data.value;
             } catch (error) {
-                jokeText.innerHTML = "Oops, something went wrong! Try again.";
+                jokeText.innerHTML = "Oops, something went wrong!";
             }
         }
 
-        // Event listeners for button clicks
+        function saveJoke() {
+            const joke = jokeText.innerText;
+            if (!savedJokes.includes(joke)) {
+                savedJokes.push(joke);
+                alert("Joke saved!");
+            } else {
+                alert("This joke is already saved.");
+            }
+        }
+
+        function showSavedJokesPage() {
+            mainPage.style.display = 'none';
+            savedJokesPage.style.display = 'block';
+        }
+
+        function showMainPage() {
+            savedJokesPage.style.display = 'none';
+            mainPage.style.display = 'block';
+        }
+
+        function generateSavedJoke() {
+            if (savedJokes.length > 0) {
+                const randomIndex = Math.floor(Math.random() * savedJokes.length);
+                savedJokeText.innerText = savedJokes[randomIndex];
+            } else {
+                savedJokeText.innerText = "No saved jokes available.";
+            }
+        }
+
         jokeButton.addEventListener('click', fetchRandomJoke);
         chuckButton.addEventListener('click', fetchChuckJoke);
+        saveJokeButton.addEventListener('click', saveJoke);
+        viewSavedJokesButton.addEventListener('click', showSavedJokesPage);
+        backToMainButton.addEventListener('click', showMainPage);
+        generateSavedJokeButton.addEventListener('click', generateSavedJoke);
     </script>
 
 </body>
