--- a/saved.html
+++ b/saved.html
@@ -49,11 +49,22 @@
         <div id="jokeList"></div>
     </div>
 
+    <!-- Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-database-compat.js"></script>
-    <script src="js/firebase-config.js"></script>
 
     <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyBvcp5k74i_O6QDcuUmP-eNLv-Qs9uFPEE",
+            authDomain: "jokes-da674.firebaseapp.com",
+            databaseURL: "https://jokes-da674-default-rtdb.firebaseio.com",
+            projectId: "jokes-da674",
+            storageBucket: "jokes-da674.firebasestorage.app",
+            messagingSenderId: "362441781628",
+            appId: "1:362441781628:web:a72d628e8e646707bff4f9",
+            measurementId: "G-3L0ZEHQBWX"
+        };
+
         firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
 
