--- a/index.html
+++ b/index.html
@@ -56,25 +56,6 @@
         .save-button {
             background-color: #4caf50;
         }
-
-        /* Style for the saved bubble */
-        .saved-bubble {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            background-color: #4caf50;
-            color: #fff;
-            padding: 10px 20px;
-            border-radius: 20px;
-            font-size: 1rem;
-            font-weight: bold;
-            opacity: 0;
-            transition: opacity 0.5s ease-in-out;
-        }
-
-        .saved-bubble.show {
-            opacity: 1;
-        }
     </style>
 </head>
 <body>
@@ -115,14 +96,21 @@
 
         const jokeApis = [
             'https://icanhazdadjoke.com/',
-            'https://v2.jokeapi.dev/joke/Any'
+            'https://v2.jokeapi.dev/joke/Any',
+            'https://official-joke-api.appspot.com/jokes/random'
         ];
 
+        /**
+         * Randomly selects one of the joke APIs (icanhazdadjoke or JokeAPI)
+         */
         function getRandomJokeAPI() {
             const randomIndex = Math.floor(Math.random() * jokeApis.length);
             return jokeApis[randomIndex];
         }
 
+        /**
+         * Fetches a random joke from either icanhazdadjoke or JokeAPI
+         */
         async function fetchRandomJoke() {
             const apiUrl = getRandomJokeAPI();
             try {
@@ -130,47 +118,40 @@
                 const data = await response.json();
                 jokeText.innerText = data.joke || `${data.setup} - ${data.delivery}`;
             } catch (error) {
-                console.error("Error fetching joke:", error);
+                console.error("Error fetching random joke:", error);
                 jokeText.innerText = "Oops, something went wrong!";
             }
         }
 
-        function showSavedBubble() {
-            // Check if the bubble already exists
-            let savedBubble = document.querySelector('.saved-bubble');
-            
-            // If it doesn't exist, create it
-            if (!savedBubble) {
-                savedBubble = document.createElement('div');
-                savedBubble.classList.add('saved-bubble');
-                savedBubble.innerText = 'Saved!';
-                document.body.appendChild(savedBubble);
+        /**
+         * Fetches a joke from the Chuck Norris API
+         */
+        async function fetchChuckJoke() {
+            try {
+                const response = await fetch('https://api.chucknorris.io/jokes/random');
+                const data = await response.json();
+                jokeText.innerText = data.value;
+            } catch (error) {
+                console.error("Error fetching Chuck Norris joke:", error);
+                jokeText.innerText = "Oops, something went wrong!";
             }
-
-            // Show the bubble
-            savedBubble.classList.add('show');
-
-            // Remove it after 1 second
-            setTimeout(() => {
-                savedBubble.classList.remove('show');
-            }, 1000);
         }
 
+        /**
+         * Saves the current joke to Firebase
+         */
         function saveJoke() {
             const joke = jokeText.innerText;
             if (joke && joke !== "Oops, something went wrong!") {
                 const newJokeKey = database.ref('jokes').push().key;
                 database.ref('jokes/' + newJokeKey).set(joke)
-                    .then(() => {
-                        console.log("Joke saved successfully");
-                        showSavedBubble();
-                    })
+                    .then(() => console.log("Joke saved successfully"))
                     .catch(err => console.error("Error saving joke:", err));
             }
         }
 
         jokeButton.addEventListener('click', fetchRandomJoke);
-        chuckButton.addEventListener('click', fetchRandomJoke);
+        chuckButton.addEventListener('click', fetchChuckJoke); // Calls the Chuck Norris joke API
         saveJokeButton.addEventListener('click', saveJoke);
     </script>
 
