--- a/index.html
+++ b/index.html
@@ -56,6 +56,24 @@
         .save-button {
             background-color: #4caf50;
         }
+
+        .saved-bubble {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background-color: #4caf50;
+            color: #fff;
+            padding: 10px 20px;
+            border-radius: 20px;
+            font-size: 1rem;
+            font-weight: bold;
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
+        }
+
+        .saved-bubble.show {
+            opacity: 1;
+        }
     </style>
 </head>
 <body>
@@ -100,17 +118,11 @@
             'https://official-joke-api.appspot.com/jokes/random'
         ];
 
-        /**
-         * Randomly selects one of the joke APIs (icanhazdadjoke or JokeAPI)
-         */
         function getRandomJokeAPI() {
             const randomIndex = Math.floor(Math.random() * jokeApis.length);
             return jokeApis[randomIndex];
         }
 
-        /**
-         * Fetches a random joke from either icanhazdadjoke or JokeAPI
-         */
         async function fetchRandomJoke() {
             const apiUrl = getRandomJokeAPI();
             try {
@@ -118,14 +130,11 @@
                 const data = await response.json();
                 jokeText.innerText = data.joke || `${data.setup} - ${data.delivery}`;
             } catch (error) {
-                console.error("Error fetching random joke:", error);
+                console.error("Error fetching joke:", error);
                 jokeText.innerText = "Oops, something went wrong!";
             }
         }
 
-        /**
-         * Fetches a joke from the Chuck Norris API
-         */
         async function fetchChuckJoke() {
             try {
                 const response = await fetch('https://api.chucknorris.io/jokes/random');
@@ -137,21 +146,41 @@
             }
         }
 
-        /**
-         * Saves the current joke to Firebase
-         */
+        function showSavedBubble() {
+            let savedBubble = document.querySelector('.saved-bubble');
+            if (!savedBubble) {
+                savedBubble = document.createElement('div');
+                savedBubble.classList.add('saved-bubble');
+                savedBubble.innerText = 'Saved!';
+                document.body.appendChild(savedBubble);
+            }
+
+            savedBubble.classList.add('show');
+            setTimeout(() => savedBubble.classList.remove('show'), 1000);
+        }
+
         function saveJoke() {
             const joke = jokeText.innerText;
             if (joke && joke !== "Oops, something went wrong!") {
-                const newJokeKey = database.ref('jokes').push().key;
-                database.ref('jokes/' + newJokeKey).set(joke)
-                    .then(() => console.log("Joke saved successfully"))
-                    .catch(err => console.error("Error saving joke:", err));
+                database.ref('jokes').once('value', snapshot => {
+                    const jokes = snapshot.val() ? Object.values(snapshot.val()) : [];
+                    if (!jokes.includes(joke)) {
+                        const newJokeKey = database.ref('jokes').push().key;
+                        database.ref('jokes/' + newJokeKey).set(joke)
+                            .then(() => {
+                                console.log("Joke saved successfully");
+                                showSavedBubble();
+                            })
+                            .catch(err => console.error("Error saving joke:", err));
+                    } else {
+                        console.log('Joke already saved.');
+                    }
+                });
             }
         }
 
         jokeButton.addEventListener('click', fetchRandomJoke);
-        chuckButton.addEventListener('click', fetchChuckJoke); // Calls the Chuck Norris joke API
+        chuckButton.addEventListener('click', fetchChuckJoke);
         saveJokeButton.addEventListener('click', saveJoke);
     </script>
 
